--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
           <a href="pl.html">Mobiles</a>
         </li>
         <li class="option">
-          <a href="Electronics.html"
+          <a href="#Electronics"
             ><img src="e.jpeg" width="50" height="50" alt="image"
           /></a>
           <br />
-          <a href="Electronics.html">Electronics</a>
+          <a href="#Electronics">Electronics</a>
         </li>
         <li class="option">
-          <a href="grocery.html"
+          <a href="#Grocery"
             ><img src="g.jpeg" width="50" height="50" alt="image"
           /></a>
           <br />
-          <a href="grocery.html">Grocery</a>
+          <a href="#Grocery">Grocery</a>
         </li>
         <li class="option">
-          <a href="fashon.html"
+          <a href="#Fashion"
             ><img src="f.jpeg" width="50" height="50" alt="image"
           /></a>
           <br />
-          <a href="fashon.html">Fashion</a>
+          <a href="#Fashion">Fashion</a>   
         </li>
         <li class="option">
           <a href="Beauty.html"
